Added staff-login endpoint